--- a/wfDocServices/appsettings.json
+++ b/wfDocServices/appsettings.json
@@ -25,6 +25,6 @@
   "ConnectionStrings": {
     "SqlServer": "Server={Host};Database={Name};User Id={User};Password={Pass};",
     "MySql": "Server={Host};Database={Name};User={User};Password={Pass};"
-
-  }
+  },
+  "env": "-demo"
 }
